# rnnoise

./: CMakeLists.txt
examples/: loopback.cc  rnnoise.sln  rnnoise.vcxproj  rnnoise.vcxproj.filters  rnnoise_demo.c
include/: rnnoise.h
src/: celt_lpc.c  common.h  denoise.c  dump_features.c  parse_lpcnet_weights.c  pitch.c  rnnoise_data_mini.c  write_weights.c
